# Login-Registration-System

./: CMakeLists.txt
LoginRegistrationSystem/: CMakeLists.txt  LoginRegistrationSystem.cpp  LoginRegistrationSystem.h  encrypt.cpp  encrypt.h  user.db
